css/styles.css
/*Custom Stylesheet by Michael McGowan*/

/*NAVIGATION BARS*/
/*navbar and iconbar*/
.horizontal > li {
  float: right;
}

/*top navbar*/
.navbar {
  background-color: #2394ee;
  padding: 5px 100px 10px 0px;
  padding-right: 100px; /*would have rather used percentages here but couldn't figure it out*/
  height: 35px;
}

/*compress icons*/
.navbar img {
  height: 17px;
}

/*navbar link text*/
.navbar li a {
  font-weight: bold;
  color: white;
  font-size: 10.5px;
  padding-right: 10px;
}

/*separators via stack overflow https://stackoverflow.com/questions/5688791/separators-for-navigation/11574821*/
.navbar > div > ul > li > a > img {
  background-image: url(../images/separator.png);
  background-repeat: no-repeat;
  background-position: top left;
  padding-left: 10px;
  margin: 0 auto;
}

/*navigation bar with icons*/
.icons {
  background-image: url(../images/icon-background.png);
  background-position: center;
  height: 110px;
  padding-top: 20px;
}

/*removes list styling for nav-bar and icon-bar*/
.icons ul, .navbar ul {
  list-style: none;
}

/*styling for standard/hover state icons*/
.front:hover {
    opacity: 0;
    cursor: pointer;
}

.back {
  margin-left: 1px;
}

.above {
   position: absolute;
  z-index: 2;
}

.below {
   position: absolute;
  z-index: 1;
}

/*Icons Spacing*/
#dashboard {
  left: 20%;
}

#people {
  left: 30%;
}

#chat {
  left: 40%;
}

#tag {
  left: 50%;
}

#edit {
  left: 60%;
}

#stats {
  left: 70%;
}

#chevron {
  left: 21.5%;
  bottom: 0%;
  margin-bottom: -5px;
}

/*icon adjustment*/
.shift-2 {
  margin-left: -2px;
}

.shift-1 {
  margin-left: -1px;
}

/*dashboard bar*/
.dash {
  background-color: #3dca6a;
  border-radius: 5px;
  padding: 20px 0px 10px 0px;
  margin-top: 15px;
}

.dash h1 {
  font-family: 'Hind', sans-serif;
  font-size: 27px;
  color: white;
  margin: 0 auto;
  display: inline;
}

/*search bar in dashboard*/
.dash form {
  float: right;
  margin-top: -3px;
}

.dash form input {
  border-color: #2db55b;
  border-style: solid;
  border-width: 1px;
  border-radius: 2px;
}

.dash img {
  z-index: 2;
  position: absolute;
  left: 96%;
}

/*CONTENT*/

/*general styling*/
/*styling for content div*/
.content {
  background-image: url(../images/trans-gradient.png);
  background-size:contain;
  margin: 0px -15px;
  background-repeat: no-repeat;
  margin-top: 20px;
  padding: 10px;
}

.content .row {
  box-shadow: 0px 1px 1px grey;
}

/*actual font is myriad pro, hind google font looks identical*/
h2 {
  font-family: 'Hind', sans-serif;
  font-size: 30px;
  color: #3399ff;
  margin-left: 20px;
  display: inline;
}

/*panels*/
.tiles {
  margin: 0px 3px;
  background-color: white;
  padding-top: 15px;
}

/*remove shadow*/
.row .row {
  box-shadow: none;
}

/*remove column padding*/
.internal {
  padding: 0px;
}

/*tiles internal border-right*/
.border-right {
  border-right: 0.5px solid #eeeeee;
}

.border-bottom {
    border-bottom: 0.5px solid #eeeeee;
}

/*sprites as list items*/
.bullet {
  float: left;
  display: inline;
  margin-left: 20px;
}

/*ANNOUNCEMENTS (top row)*/
.announcements {
  background-color: white;
  border: 1px solid #efefef;
  margin: 0px 3px;
  line-height: 45px;
}

.announcements h4 {
  font-family: 'Hind', sans-serif;
  font-weight: lighter;
  font-size: 13px;
  color: #f57e20;
  margin: 0px;
  line-height: 45px;
  vertical-align: middle;
}

.announcements p {
  font-family: 'Hind', sans-serif;
  font-weight: lighter;
  font-size: 13px;
  color: #777777;
  margin: 0px;
}

.announcements a { /*arrow buttons*/
  margin: 3px;
}

.announcements a img:hover {
  transform: scale(1.1);
}

/*shared - TASKS and RECOMMENDATIONS*/
.tasks h3, .rec h3 {
  font-family: 'Hind', sans-serif;
  font-size: 20px;
  color: #3399ff;
  margin-left: 15px;
  display: inline;
  vertical-align: super;
}

.tasks ul, .rec ul {
  list-style: none;
  padding: 0px;
  margin-top: 5px;
  margin-bottom: 0px;
}

.tasks li:last-child { /*rm border from last item*/
  border: none;
}

.tasks li:hover, .rec li:hover {
  /*grayscale filter from w3schools - link: https://www.w3schools.com/cssref/css3_pr_filter.asp*/
  -webkit-filter: grayscale(100%);
  filter: grayscale(100);
  cursor: pointer;
}

/*TASKS*/
.tasks .sprite-tasks-settings {
  float: right;
  display: inline;
  margin-right: 20px;
}

.tasks li {
  line-height: 40px;
  padding: 15px 0px 5px 0px;
  border-bottom: 0.5px solid #eeeeee;
}

/*task tiles hover*/
.tasks .sprite-tasks-settings:hover {
  transform: scale(1.1);
  cursor: pointer;
}

/*task tiles*/
.tag {
  float: right;
  display: inline;
  vertical-align: super;
  margin-right: 20px;
}

/*RECOMMENDATIONS*/
.rec {
  padding: 20px 20px; /*border troubleshooting*/
}

.rec li {
  line-height: 40px;
  padding: 15px 0px 5px 0px;
  border-bottom: 0.5px dotted #eeeeee;
}

.rec h2 {
  margin: 0px;
}

/*bullet spacing*/
.rec-list .bullet {
  width: 20px;
  margin: 0px 20px 0px 0px;
}

/*superscript*/
.rec h6 {
  font-family: 'Hind', sans-serif;
  font-size: 10px;
  color: #777777;
  margin: 0px;
  display: block;
  vertical-align: middle;
  text-align: left;
  margin-bottom: 3px;
}

/*main content*/
.rec p {
  font-family: 'Hind', sans-serif;
  font-size: 17px;
  color: #777777;
  line-height: normal;
  display: block;
  text-align: left;
  line-height: 100%;
}

.rec li:hover p, .rec li:hover h6 {
  color: black;
}

/*Dropdown Menu Styling*/

.dropbtn {
    background-color: white;
    color: #666666;
    padding: 3px 7px;
    font-size: 16px;
    border: 1px solid #cccccc;
    border-radius: 3px;
    cursor: pointer;
}
.dropbtn * {
  display: inline;
  margin: 12px;
}
.drop button {
  padding: 0px;
}

.dropbtn-items {
    display: none;
    position: absolute;
    background-color: #f9f9f9;
    min-width: 160px;
    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
    z-index: 1;
}

.drop-content a {
    text-decoration: none;
    display: block;
    border-bottom: 0.5px solid #eeeeee;
}

.analytics p {
  font-family: 'Hind', sans-serif;
  font-size: 13px;
  color: #777777;
  text-align: left;
  line-height: 20px;
  vertical-align: middle;
  margin: 10px;
}

.drop:hover .dropbtn-items {
    display: block;
}

.analytics h5 {
  font-family: 'Hind', sans-serif;
  font-size: 13px;
  color: #999999;
  margin-left: 30px;
  display: inline;
  vertical-align: middle;
  text-align: left;
}

.sprite-graph {
  margin: 30px 20px 20px 20px;
}

